Fixing dark mode issue

--- a/custom.css
+++ b/custom.css
@@ -93,3 +93,6 @@
   .card-list__description, .card-list__title {
     color: #fff !important;
   }
+  body.instantencore-theme-dark .text-field__label span {
+    color: #000 !important;
+  }
